styles/app.css
/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!! ÉLÉMENTS GLOBAUX !!!!!!!!!!!!!!!!!!!!!!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/

html {
  --link-iconsheet: url(/shinydex/images/iconsheet.webp);
  --link-pokemonsheet: url(/shinydex/images/pokemonsheet.webp);
  --tap-safe-size: 48px;
  --border-radius: 12px;
  --sub-border-radius: calc(1.12 * (var(--border-radius) - var(--distance-to-parent-border, 4px))); /* 12% optical adjustment */
  --section-title-height: 64px;
  --nav-bar-height: 80px;
  --anti-spoilers-filter: grayscale() brightness(var(--pokemon-sprite-anti-spoilers-brightness)) opacity(var(--pokemon-sprite-anti-spoilers-opacity));

  /* Élévation */
  --z-top-layer: 60;
  --z-sprite-viewer: 60;
  --z-filter-menu: 50; /* Material elevation 3 */
  --z-obfuscator: 40;
  --z-section-titre: 35;
  --z-fab: 30; /* Material elevation 3 */
  --z-nav: 25; /* Material elevation 2 */
  --z-notification: 20; /* Material elevation 2 */
}

body[data-anti-spoilers-pokedex="off"] #pokedex {
  --anti-spoilers-filter: none;
}

body[data-anti-spoilers-friends="off"] :is(#partage, #chromatiques-ami) {
  --anti-spoilers-filter: none;
}

p {
  margin: 0;
}
p + p {
  margin-top: 16px;
}
span.nowrap {
  white-space: nowrap;
}

html,
body {
  width: 100%;
  height: 100%;
  overflow-x: hidden;
  overflow-y: hidden;
  scrollbar-color: rgb(var(--on-surface-variant)) transparent;
}

body {
  display: grid;
  --nav-bar-height: 80px;
  --bottom-bar-height: calc(var(--nav-bar-height) + var(--section-title-height) - 8px);
  grid-template-rows: 1fr var(--bottom-bar-height);
  grid-template-columns: 1fr;
  margin: 0;
  font-family: 'Roboto', system-ui;
}

body:not(
  [data-section-actuelle~="mes-chromatiques"],
  [data-section-actuelle~="pokedex"],
  [data-section-actuelle~="chasses-en-cours"],
  [data-section-actuelle~="corbeille"],
  [data-section-actuelle~="partage"],
  [data-section-actuelle~="chromatiques-ami"]
) {
  --bottom-bar-height: var(--nav-bar-height);
}

[hidden] {
  display: none !important;
}

::view-transition-old(root),
::view-transition-new(root) {
  animation: none;
}



/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!! BARRE DE NAVIGATION !!!!!!!!!!!!!!!!!!!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/

nav {
  grid-row: 2 / 3;
  grid-column: 1 / 2;
  display: grid;
  --nombre-sections: 5;
  grid-template-rows: calc(var(--section-title-height) - 8px) 1fr;
  grid-template-columns: repeat(var(--nombre-sections), 1fr);
  align-items: center;
  z-index: var(--z-nav);
  /*view-transition-name: nav;*/
}

nav > search-box::part(form) {
  grid-row: 1;
  grid-column: 1 / -1;
  padding-inline: 8px;
  margin: auto;
  margin-bottom: 0;
  width: 100%;
  box-sizing: border-box;
  height: 48px;
}

nav > search-box::part(input) {
  --surface-color: var(--surface-container-high);
  --elevation-opacity: var(--elevation-2-opacity);
  height: 100%;
}

.nav-link {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  flex-grow: 1;
  gap: 4px;
  text-decoration: none;
  font-weight: 500;
  position: relative;
  overflow: hidden;
  outline-offset: -3px;
  height: 100%;
  box-sizing: border-box;
  padding-top: 12px;
  padding-bottom: 16px;
  color: rgb(var(--on-surface-variant));
  --indicator-elevation-opacity: 0;
  background: none;
}

.nav-link:is(:focus, :hover, :active) {
  --indicator-elevation-opacity: var(--elevation-2-opacity);
}

@media (hover: none) {
  .nav-link:is(:focus, :hover) {
    --state-opacity: 0;
    --indicator-elevation-opacity: 0;
  }
}

@keyframes bulle-nav {
  0% { opacity: calc(1 * .16); transform: scale(0); }
  90% { opacity: calc(.4 * .16); }
  100% { opacity: 0; transform: scale(1); }
}

.nav-link::before {
  content: '';
  display: block;
  position: absolute;
  transform: scale(0);
  transform-origin: var(--transform-origin, center center);
  --size: calc(90vw / var(--nombre-sections));
  width: var(--size);
  height: var(--size);
  background-color: var(--nav-bubble-color);
  border-radius: 50%;
  z-index: 0;
}

.nav-link.only-pc {
  display: none;
}

.nav-link.bubbly::before {
  animation: bulle-nav .3s var(--easing-decelerate);
}

.nav-link shiny-stars {
  --size: 1.2em;
}

.nav-link .material-icons {
  height: 32px;
  width: 64px;
  border-radius: 16px;
  display: flex;
  place-items: center;
  justify-content: center;
  background-color: rgb(var(--icon-surface, 0 0 0 0));
  color: rgb(var(--icon-color, var(--on-surface-variant)));
  --elevation-opacity: var(--indicator-elevation-opacity);
  --state-tint: var(--icon-state-tint, var(--on-surface-variant));
}

body[data-section-actuelle~="mes-chromatiques"] .nav-link[data-nav-section="mes-chromatiques"],
body[data-section-actuelle~="pokedex"] .nav-link[data-nav-section="pokedex"],
body[data-section-actuelle~="chasses-en-cours"] .nav-link[data-nav-section="chasses-en-cours"],
body[data-section-actuelle~="partage"] .nav-link[data-nav-section="partage"],
body[data-section-actuelle~="flux"] .nav-link[data-nav-section="flux"],
body[data-section-actuelle~="corbeille"] .nav-link[data-nav-section="corbeille"],
body[data-section-actuelle~="parametres"] .nav-link[data-nav-section="parametres"],
body[data-section-actuelle~="a-propos"] .nav-link[data-nav-section="a-propos"] {
  color: rgb(var(--on-surface));
  --icon-surface: var(--secondary-container);
  --icon-color: var(--on-secondary-container);
  --indicator-elevation-opacity: var(--elevation-2-opacity);
  --icon-state-tint: var(--on-surface);
}

body[data-section-actuelle~="pokedex"] {
  --caught-filter-display: flex; /* disables "display: none" on caught filter in filter-menu */
  --orders-display: none;
}
/* ... */

